# miniarrow-rs

./: Cargo.toml  README.md
src/: datatype.rs  error.rs  field.rs  fields.rs  lib.rs  schema.rs
