# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "miniarrow-schema"
version = "0.1.0"
edition = "2021"
description = "Defines the logical types for arrow arrays"

[lib]
name = "miniarrow_schema"
path = "src/lib.rs"
bench = false

[features]
std = ["serde/std", "bitflags/std"]

[dependencies]
ahash = { version = "0.8.11", default-features = false }
indexmap = { version = "2.1", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "rc"], optional = true }
bitflags = { version = "2.0.0", default-features = false, optional = true }

[dev-dependencies]
serde_json = "1.0"
bincode = { version = "1.3.3", default-features = false }
